Fix lists left margin on mobile devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -195,14 +195,15 @@ blockquote {
 		}
 		ol {
 			font-size: 1em;
-			margin-left: 30px;
+			margin-left: 0;
 			margin-top: -10px;
 			margin-bottom: 15px;
 			li {
 				margin-top: 10px;
 				line-height: 150%;
 				padding: 5px;
-				padding-left: 5px;
+				padding-left: 0;
+				list-style-position: inside;
 				@media screen and (max-width: $br) {
 					padding: 10px 0 10px 0;
 				}
@@ -305,10 +306,10 @@ blockquote {
 		}
 		ol {
 			font-size: 1em;
-			margin-left: 30px;
 			margin-top: -10px;
 			margin-bottom: 15px;
 			li {
+				list-style-position: inside;
 				margin-top: 10px;
 				line-height: 150%;
 				padding: 5px;
